<resources>
    <string name="app_name">一个</string>
    <!--应用的字符串 -->
    <string name="welcome_btn">进入ONE3.0</string>
    <string name="guide_msg">我的文艺生活</string>
    <string name="toast_main_back_hint">再按一次返回键退出程序</string>
    <string name="copyright">Copyright ©1997-2016 公司版权所有</string>
    <string name="reading_page_title">阅读</string>
    <string name="music_page_title">音乐</string>
    <string name="movie_page_title">电影</string>
    <string name="main_issue">往期列表</string>
    <string name="music_content">评论列表</string>
    <string name="music_story">音乐故事</string>
    <string name="music_content_hot">以上是热门评论</string>
    <string name="comment_complete">完成</string>
    <string name="comment_hint">在这里写下你想说的......</string>
    <string name="search_picture">插图</string>
    <string name="search_reading">阅读</string>
    <string name="search_music">音乐</string>
    <string name="search_movie">影视</string>
    <string name="search_author">作者/音乐人</string>
    <string name="search_hint">请输入需要搜索的内容</string>
    <string name="login_hint">未登录</string>
    <string name="setting">设置</string>
    <string name="collection">收藏</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_other">其他设置</string>
    <string name="movie_grade">评分</string>
    <string name="your_movie_grade">您的评分</string>
    <string name="movie_story">电影故事</string>
    <string name="movie_table">一个.电影表</string>
    <string name="complete">完成</string>
    <string name="comment">评论</string>
    <string name="personal_little">小记</string>
    <string name="personal_music">歌单</string>
    <string name="personal_collection">图文</string>
    <string name="personal_reading">文章</string>
    <string name="personal_movie_collection">电影</string>
    <string name="personal_message_collection">消息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
