<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layoutAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.one_mvp_retrofit_dagger2_glide_rxjava.ui.search.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_40_dp">
        <ImageButton
            android:id="@+id/search_return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_return_image"/>
        <EditText
            android:id="@+id/search_edittext"
            android:layout_toRightOf="@+id/search_return_btn"
            android:layout_toLeftOf="@+id/search_go_btn"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_12_sp"
            android:paddingLeft="@dimen/margin_size_6_dp"
            android:hint="@string/search_hint"
            android:background="@color/white"
            android:layout_height="@dimen/margin_size_24_dp" />
        <ImageButton
            android:id="@+id/search_go_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/search_icon_selector"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_4_dp"
        android:background="@drawable/divi_image_2"/>
    <FrameLayout
        android:id="@+id/search_framelayout"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/search_image"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/search_radiogroup"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/search_radiogroup_gp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/search_picture"
                    style="@style/search_text_style"
                    android:checked="true"
                    android:textColor="@color/coarse_blue"
                    android:text="@string/search_picture"/>
                <RadioButton
                    android:id="@+id/search_reading"
                    style="@style/search_text_style"
                    android:text="@string/search_reading"/>
                <RadioButton
                    android:id="@+id/search_music"
                    style="@style/search_text_style"
                    android:text="@string/search_music"/>
                <RadioButton
                    android:id="@+id/search_movie"
                    style="@style/search_text_style"
                    android:text="@string/search_movie"/>
                <RadioButton
                    android:id="@+id/search_author"
                    style="@style/search_text_style"
                    android:text="@string/search_author"/>
            </RadioGroup>
            <View style="@style/line"/>
            <android.support.v4.view.ViewPager
                android:id="@+id/search_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v4.view.ViewPager>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
