<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_200_dp"
        android:background="@drawable/default_indi_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/personal_unsign_return_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_return_image"/>
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personal_unsign_headview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/head"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_size_4_dp"
            android:layout_below="@+id/personal_unsign_headview"
            android:textColor="@color/white"
            android:text="@string/login_hint"/>
    </RelativeLayout>
    <TextView
        android:text="@string/setting"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_size_10_dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_40_dp" />
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_40_dp">
        <ImageView
            android:id="@+id/personal_unsign_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_size_10_dp"
            android:background="@drawable/center_night_mode"
            />
        <TextView
            android:layout_marginLeft="@dimen/margin_size_10_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/personal_unsign_night_mode"
            android:layout_centerVertical="true"
            android:text="@string/setting_night_mode"/>
        <CheckBox
            android:id="@+id/personal_unsign_night_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_size_10_dp"
            android:background="@drawable/sel_personal_check"
            />
        <View style="@style/line"
            android:layout_marginLeft="@dimen/margin_size_10_dp"
            android:layout_toRightOf="@+id/personal_unsign_night_mode"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_40_dp">
        <ImageView
            android:id="@+id/personal_unsign_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_size_10_dp"
            android:background="@drawable/center_setting"
            />
        <TextView
            android:layout_marginLeft="@dimen/margin_size_10_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/personal_unsign_setting"
            android:layout_centerVertical="true"
            android:text="@string/setting_other"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_size_14_dp"
            android:background="@drawable/forward"/>
        <View style="@style/line"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>