<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_280_dp"
            android:background="@drawable/default_indi_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/personal_sign_return_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sel_return_image" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/personal_sign_headview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_size_40_dp"
                android:src="@drawable/head"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/margin_size_1_dp" />

            <TextView
                android:id="@+id/personal_sign_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_sign_headview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_size_8_dp"
                android:text="@string/login_hint"
                android:textColor="@color/white" />
            <LinearLayout
                android:id="@+id/personal_sign_more"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_size_20_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <LinearLayout
                    android:layout_marginRight="@dimen/margin_size_26_dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/margin_size_100_dp"
                        android:layout_height="@dimen/margin_size_100_dp"
                        android:background="@drawable/default_diary_bg">
                        <ImageView
                            android:id="@+id/personal_sign_little_image"
                            android:layout_width="@dimen/margin_size_87_dp"
                            android:layout_margin="@dimen/margin_size_4_dp"
                            android:layout_height="@dimen/margin_size_70_dp"
                            android:background="@color/black"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:text="@string/personal_little"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/margin_size_26_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="@dimen/margin_size_100_dp"
                        android:layout_height="@dimen/margin_size_100_dp"
                        android:background="@drawable/default_music_bg">
                        <ImageView
                            android:id="@+id/personal_sign_music_image"
                            android:layout_width="@dimen/margin_size_87_dp"
                            android:layout_marginTop="@dimen/margin_size_1_dp"
                            android:layout_marginLeft="@dimen/margin_size_6_dp"
                            android:layout_height="@dimen/margin_size_95_dp"
                            android:background="@color/black"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/personal_music"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:text="@string/collection"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_size_10_dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp" />
        <RelativeLayout
            android:id="@+id/personal_sign_image_collection_rl"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_sign_image_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_image_collection"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_sign_image_collection"
                android:layout_centerVertical="true"
                android:text="@string/personal_collection"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_size_14_dp"
                android:background="@drawable/forward"/>
            <View style="@style/line"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_toRightOf="@+id/personal_sign_image_collection"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/personal_sign_center_reading_rl"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_sign_center_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_reading_collection"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_sign_center_reading"
                android:layout_centerVertical="true"
                android:text="@string/personal_reading"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_size_14_dp"
                android:background="@drawable/forward"/>
            <View style="@style/line"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_toRightOf="@+id/personal_sign_center_reading"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/personal_sign_movie_rl"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_sign_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_movie_collection"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_sign_movie"
                android:layout_centerVertical="true"
                android:text="@string/personal_movie_collection"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_size_14_dp"
                android:background="@drawable/forward"/>
            <View style="@style/line"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_toRightOf="@+id/personal_sign_movie"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/personal_sign_message_rl"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_sign_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_message"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_sign_message"
                android:layout_centerVertical="true"
                android:text="@string/personal_message_collection"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_size_14_dp"
                android:background="@drawable/forward"/>
            <View style="@style/line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <TextView
            android:text="@string/setting"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_size_10_dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp" />
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_unsign_night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_night_mode"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_unsign_night_mode"
                android:layout_centerVertical="true"
                android:text="@string/setting_night_mode"/>
            <CheckBox
                android:id="@+id/personal_sign_night_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_size_10_dp"
                android:background="@drawable/sel_personal_check"
                />
            <View style="@style/line"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_toRightOf="@+id/personal_unsign_night_mode"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/personal_sign_setting_rl"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/margin_size_10_dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_40_dp">
            <ImageView
                android:id="@+id/personal_sign_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:background="@drawable/center_setting"
                />
            <TextView
                android:layout_marginLeft="@dimen/margin_size_10_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/personal_sign_setting"
                android:layout_centerVertical="true"
                android:text="@string/setting_other"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_size_14_dp"
                android:background="@drawable/forward"/>
            <View style="@style/line"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>